# hackathon-simulation

./: .gitignore  LICENSE  PLAN.md  README.md  db.py  index.html  lib.py  main.py  pyproject.toml  server.py  setup.py
hackathon_simulation/: __init__.py  engine.py  exporting.py  llm.py  models.py  profiles.py  utils.py
static/: index.html
streamlit_app/: app.py
